style.css
body {
    font-family: 'Roboto', sans-serif;
    margin: 0px;
    display: flex;
    flex-direction: column;
}

button {
    background-color: #3882F6;
    color: white;
    font-weight: bold;
    width: 100px;
    height: 35px;
    border-radius: 8px;
    border: none;
}

.header {
    display: flex;
    gap: 100px;
    align-items: center;
    justify-content: center;
    color: #E5E7EB;
    background-color: #1F2937;
    font-size: 18px;
    height: 75px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: bold;
    flex-basis: 200px;
}

.linkbox {
    display: flex;
    flex-basis: 650px;
    gap: 30px;
    justify-content: flex-end;
}

a {
    text-decoration: none;
    display: flex;
    color: #E5E7EB;
    background-color: #1F2937;
    font-size: 18px;
    justify-content: center;
}

.section1 {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 55px;
    color: #E5E7EB;
    background-color: #1F2937;
    font-size: 18px;
    height: 400px;
}

.herobox {
    display: flex;
    flex-direction: column;
    flex-basis: 400px;
    gap: 15px;
}

.hero {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
}

.mainimg {
    background: grey;
    text-align: center;
    width: 500px;
    height: auto;
    line-height: 250px;
}

.section2 {
    display: flex;
    flex-direction: column;
    height: 500px;
}

.section2head {
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
    text-align: center;
    padding: 40px;
}

.section2 .container {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    gap: 20px;
}

p {
    text-align: center;
}

.box {
    display: flex;
    flex-direction: column;
    flex-basis: 200px;
    justify-content: center;
    align-items: center;
}

.box img {
    width: 200px;
    height: 200px;
}

.section3 {
    background: #E5E7EB;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 10% 30% 10% 30%;
}


.quote {
    font-size: 36px;
    font-weight: light;
    font-style: italic;
    align-self: center;
}

.author {
    font-size: 24px;
    font-weight: light;
    align-self: flex-end;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 75px;
    color: #E5E7EB;
    background-color: #1F2937;
    font-size: 18px;
}

.section4 {
    display: flex;
    justify-content: center;
}

.section4 .container {
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: #3882F6;
    margin: 50px;
    color: white;
    flex: 0 0 750px;
    padding: 50px;
    border-radius: 10px;
}

.section4 button {
    border: 2px solid white;
}

.bottommain {
    font-size: 20px;
    font-weight: bold;
}

